--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -21,15 +21,14 @@ spring:
         type: simple
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:h2:mem:jbh;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-        name:
-        username:
-        password:
-    jpa:
-        database-platform: io.github.jhipster.domain.util.FixedH2Dialect
-        database: H2
-        open-in-view: false
-        show-sql: false
+        url: jdbc:postgresql://localhost:5432/justbehonest
+        username: JBH
+        password: JBH
+    jpa:        
+        database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
+        database: POSTGRESQL
+        show-sql: true
+        open-in-view: false        
         hibernate:
             ddl-auto: none
             naming:
