--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "jbh",
   "version": "0.0.0",
@@ -22,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
     "bootstrap": "4.0.0",
     "core-js": "2.5.3",
+    "generator-jhipster-db-helper": "^1.1.0",
     "jquery": "3.3.1",
     "moment": "2.21.0",
     "ng-jhipster": "0.5.4",
@@ -31,10 +31,10 @@
     "reflect-metadata": "0.1.12",
     "rxjs": "6.1.0",
     "rxjs-compat": "6.1.0",
-    "swagger-ui": "2.2.10",
     "sockjs-client": "1.1.4",
-    "webstomp-client": "1.2.0",
+    "swagger-ui": "2.2.10",
     "tslib": "1.9.0",
+    "webstomp-client": "1.2.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -43,8 +43,8 @@
     "@ngtools/webpack": "6.0.0",
     "@types/jest": "22.2.3",
     "@types/node": "9.4.7",
-    "angular-router-loader": "0.8.2",
     "@types/selenium-webdriver": "3.0.8",
+    "angular-router-loader": "0.8.2",
     "angular2-template-loader": "0.6.2",
     "browser-sync": "2.24.4",
     "browser-sync-webpack-plugin": "2.2.2",
@@ -61,11 +61,11 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
+    "jasmine-reporters": "2.2.1",
     "jest": "22.4.3",
     "jest-junit": "5.1.0",
     "jest-preset-angular": "5.2.2",
     "jest-sonar-reporter": "2.0.0",
-    "jasmine-reporters": "2.2.1",
     "lint-staged": "7.0.0",
     "merge-jsons-webpack-plugin": "1.0.14",
     "moment-locales-webpack-plugin": "1.0.5",
@@ -80,13 +80,12 @@
     "tapable": "1.0.0",
     "thread-loader": "1.1.5",
     "to-string-loader": "1.1.5",
-    "ts-node": "5.0.1",
     "ts-loader": "4.0.1",
+    "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.9.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.7.2",
-    "xml2js": "0.4.19",
     "uglifyjs-webpack-plugin": "1.2.5",
     "webpack": "4.8.0",
     "webpack-cli": "2.1.3",
@@ -95,14 +94,18 @@
     "webpack-notifier": "1.6.0",
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.2.0",
-    "write-file-webpack-plugin": "4.2.0"
+    "write-file-webpack-plugin": "4.2.0",
+    "xml2js": "0.4.19"
   },
   "engines": {
     "node": ">=8.9.0",
     "yarn": ">=1.3.2"
   },
   "lint-staged": {
-    "src/**/*.{ts,css,scss}": ["prettier --write", "git add"]
+    "src/**/*.{ts,css,scss}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
